middleware and docs finished'
