# src/server.js
@@ -6,6 +6,7 @@ import morgan from 'morgan'
 
 import authRouter from './routes/authRoutes.js';
 import userRouter from './routes/userRoutes.js';
+import zooRouter from './routes/zooRoutes.js';
 import { rateLimiter } from './middleware/rateLimit.js';
 
 const app = express();
@@ -28,7 +29,7 @@ app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(specs));
 
 app.use('/api/auth', authRouter);
 app.use('/api/user', userRouter);
-// app.use('/api/zoo');
+app.use('/api/zoo', zooRouter);
 // app.use('/api/animal');
 // app.use('/api/review');
 
